# agentsmonitor

./: .gitignore  AGENTS.md  CLAUDE.md  IconGenerator.swift  MACOS_STACK_RESEARCH.md  README.md  STATUS.md  UI_TESTING.md
AgentsMonitor/: AgentProcessManager.swift  AppTheme.swift  BUILD_FIXES.md  BUILD_VERIFICATION.md  COMPLETE_BUILD_REPORT.md  Info.plist  MenuBarView.swift  MetricsView.swift  Models.swift  NewSessionSheet.swift  SESSION_DECODING_FIX.md  SESSION_LOADING_FIX.md  SessionDebugView.swift  SessionMetrics.swift  StatusBadge.swift  TerminalThemes.swift
AgentsMonitor/AgentsMonitor.xcodeproj/: project.pbxproj
AgentsMonitor/App/: AgentsMonitorApp.swift  AppDelegate.swift  StatusItemController.swift
AgentsMonitor/Components/: StatusBadge.swift  StreamingTextViewRepresentable.swift
AgentsMonitorTests/: SessionStoreTests.swift  TokenCostCalculatorTests.swift
AgentsMonitorUITests/: AgentsMonitorMenuBarTests.swift
agentsmonitor-tauri/: index.html  package-lock.json  package.json
agentsmonitor-tauri/src-tauri/: Cargo.toml  tauri.conf.json
agentsmonitor-tauri/src-tauri/capabilities/: default.json
agentsmonitor-tauri/src-tauri/src/: lib.rs  main.rs
agentsmonitor-tauri/src-tauri/src/commands/: mod.rs  process.rs  session.rs
agentsmonitor-tauri/src-tauri/src/models/: message.rs  mod.rs  session.rs  tool_call.rs
agentsmonitor-tauri/src-tauri/src/pty/: manager.rs
agentsmonitor-tauri/src-tauri/src/services/: agent_resolver.rs  mod.rs  persistence.rs
agentsmonitor-tauri/src-tauri/src/state/: app_state.rs
scripts/: ci.sh  verify_status_item.sh
(+61 files in other folders)
