[package]
name = "agentsmonitor-tauri"
version = "0.1.0"
description = "AI Agent Session Monitor"
authors = ["PPF"]
edition = "2021"

[lib]
name = "agentsmonitor_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
tauri-plugin-store = "2"
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
portable-pty = "0.8"
tokio-tungstenite = "0.26"
futures-util = "0.3"
directories = "5"
dirs = "5"
thiserror = "2"
libc = "0.2"
base64 = "0.22"

[profile.release]
strip = true
lto = true
codegen-units = 1
